--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="input_hint_port">Port</string>
     <string name="input_hint_key_name">Name</string>
     <string name="input_hint_key_code">Code</string>
+    <string name="modify_key_favourite_hint">add to favourite</string>
+    <string name="save_setting_button_text">Save</string>
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
 </resources>
